...
                    android:layout_height="172dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:src="@drawable/register_and_login_icon"/>

                <Button
                    android:id="@+id/profile_register_and_login_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/rounded_button_fill"
                    android:paddingHorizontal="30dp"
                    android:text="@string/authentication"
...
                android:padding="4dp"
                android:scrollbars="vertical">

            </android.support.v7.widget.RecyclerView>

            <Button
                android:id="@+id/profile_logout_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@color/white"
...
